--- a/home/2_GUCCI/assets/css/index.css
+++ b/home/2_GUCCI/assets/css/index.css
@@ -15,6 +15,7 @@ h1, h2, h3, h4, h5, h6 {
 
 a {
   text-decoration: none;
+  color: inherit;
 }
 
 li {
@@ -267,6 +268,7 @@ em {
           box-shadow: inset 0px 70px 100px -30px rgba(0, 0, 0, 0.8);
   -webkit-transition: background-color 0.3s;
   transition: background-color 0.3s;
+  z-index: 2;
 }
 
 .index #index-header:hover {
@@ -994,6 +996,121 @@ em {
 .index .gnb > ul .details div a img {
   width: 100%;
   height: 100%;
+}
+
+.index-main {
+  position: relative;
+  margin: 16px;
+  text-align: center;
+  z-index: 0;
+}
+
+.index-main > section + section {
+  margin-top: 2px;
+}
+
+.index-main > section {
+  position: relative;
+  width: 100%;
+  background: #e7e7e7;
+  color: #989898;
+  font-weight: 300;
+}
+
+.index-main > section > img {
+  display: block;
+  margin: 0px auto;
+  border: 1px solid black;
+}
+
+.index-main > section > em {
+  margin-top: 20px;
+  font-size: 16px;
+}
+
+.index-main > section > h4 {
+  margin: 18px 0px 12px;
+  color: #636363;
+  font-weight: 300;
+  font-size: 33px;
+}
+
+.index-main > section > span {
+  display: block;
+}
+
+.index-main > section > a {
+  display: inline-block;
+  margin-top: 15px;
+  line-height: 40px;
+  font-size: 12px;
+}
+
+.index-main > section > a:hover > span {
+  background: #313131;
+}
+
+.index-main > section > a > span {
+  padding: 13px 42px;
+  background: #1a1a1a;
+  vertical-align: middle;
+  letter-spacing: 1px;
+  color: #f2f2f2;
+}
+
+.index-main > section > aside {
+  position: absolute;
+  top: auto;
+  left: auto;
+  right: auto;
+  bottom: auto;
+  width: 180px;
+  background: #f5f5f5;
+  z-index: 1;
+}
+
+.index-main > section > aside > a {
+  display: block;
+  margin: 40px 0px;
+  color: #7a7a7a;
+}
+
+.index-main > section > aside > a > h4 {
+  margin-top: 20px;
+  font-size: 20px;
+  font-weight: 300;
+}
+
+.index-main > section > aside > a > p {
+  margin-top: 20px;
+  font-size: 15px;
+  font-family: serif;
+}
+
+.index-main > section .aside-right {
+  right: 115px;
+}
+
+.index-main > section .aside-left {
+  left: 95px;
+}
+
+.index-main > section .aside-center {
+  left: 50%;
+  -webkit-transform: translate(-50%, 0%);
+          transform: translate(-50%, 0%);
+}
+
+.aside-hover-effect {
+  display: inline-block;
+  margin-top: 23px;
+  color: #424242;
+  font-size: 12px;
+  font-weight: 400;
+}
+
+.aside-hover-effect:hover {
+  color: #7a7a7a;
 }
 
 .text-ir {
