--- a/home/2_GUCCI/assets/css/index.css
+++ b/home/2_GUCCI/assets/css/index.css
@@ -1,4 +1,5 @@
 body {
+  font-family: Futura, Futura, "Malgun Gothic", Dotum, sans-serif;
   font-size: 11px;
 }
 
@@ -33,7 +34,7 @@ em {
 
 .index .visual {
   position: relative;
-  height: 540px;
+  height: 800px;
   background: pink;
 }
 
@@ -654,9 +655,8 @@ em {
 }
 
 .index .gnb > ul > li > ul {
-  display: none;
   position: absolute;
-  top: 100%;
+  top: -800px;
   left: 0%;
   right: 0%;
   bottom: auto;
@@ -664,10 +664,16 @@ em {
   background: rgba(255, 255, 255, 0.95);
   height: auto;
   padding: 26px 0px 55px 0px;
+  -webkit-transition: top .3s;
+  transition: top .3s;
+}
+
+.index .gnb > ul > li > ul.hidden {
+  display: none;
 }
 
 .index .gnb > ul > li > ul.on {
-  display: block;
+  top: 100%;
 }
 
 .index .gnb > ul > li > ul li {
@@ -999,6 +1005,7 @@ em {
 }
 
 .index-main {
+  display: block;
   position: relative;
   margin: 16px;
   text-align: center;
@@ -1015,47 +1022,7 @@ em {
   background: #e7e7e7;
   color: #989898;
   font-weight: 300;
-}
-
-.index-main > section > img {
-  display: block;
-  margin: 0px auto;
-  border: 1px solid black;
-}
-
-.index-main > section > em {
-  margin-top: 20px;
-  font-size: 16px;
-}
-
-.index-main > section > h4 {
-  margin: 18px 0px 12px;
-  color: #636363;
-  font-weight: 300;
-  font-size: 33px;
-}
-
-.index-main > section > span {
-  display: block;
-}
-
-.index-main > section > a {
-  display: inline-block;
-  margin-top: 15px;
-  line-height: 40px;
-  font-size: 12px;
-}
-
-.index-main > section > a:hover > span {
-  background: #313131;
-}
-
-.index-main > section > a > span {
-  padding: 13px 42px;
-  background: #1a1a1a;
-  vertical-align: middle;
-  letter-spacing: 1px;
-  color: #f2f2f2;
+  overflow: hidden;
 }
 
 .index-main > section > aside {
@@ -1067,6 +1034,18 @@ em {
   width: 180px;
   background: #f5f5f5;
   z-index: 1;
+}
+
+.index-main > section > aside:nth-of-type(1) {
+  top: 120px;
+}
+
+.index-main > section > aside:nth-of-type(2) {
+  top: 300px;
+}
+
+.index-main > section > aside:nth-of-type(3) {
+  bottom: 120px;
 }
 
 .index-main > section > aside > a {
@@ -1088,17 +1067,133 @@ em {
 }
 
 .index-main > section .aside-right {
-  right: 115px;
+  right: 380px;
 }
 
 .index-main > section .aside-left {
-  left: 95px;
+  left: 380px;
 }
 
-.index-main > section .aside-center {
+.index-main > section aside.aside-center {
+  top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, 0%);
-          transform: translate(-50%, 0%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.index-main .section-image {
+  position: relative;
+  top: -100px;
+  left: auto;
+  right: auto;
+  bottom: auto;
+  margin: 0px auto;
+}
+
+.index-main .model-look .section-image {
+  top: 100px;
+}
+
+.index-main .model-look .section-image img {
+  width: 420px;
+}
+
+.index-main .model-look .section-contents {
+  top: 150px;
+}
+
+.index-main .full-image .section-image img {
+  width: 100%;
+}
+
+.index-main .section-contents {
+  position: relative;
+  top: -200px;
+  left: auto;
+  right: auto;
+  bottom: auto;
+}
+
+.index-main .section-contents > em {
+  margin-top: 20px;
+  font-size: 16px;
+}
+
+.index-main .section-contents h4 {
+  margin: 18px 0px 12px;
+  color: #636363;
+  font-weight: 300;
+  font-size: 35px;
+  letter-spacing: 2px;
+}
+
+.index-main .section-contents > span {
+  display: block;
+}
+
+.index-main .section-contents > a {
+  display: inline-block;
+  margin-top: 15px;
+  line-height: 40px;
+  font-size: 12px;
+}
+
+.index-main .section-contents > a:hover > span {
+  background: #313131;
+}
+
+.index-main .section-contents > a > span {
+  padding: 13px 42px;
+  background: #1a1a1a;
+  vertical-align: middle;
+  letter-spacing: 1px;
+  color: #f2f2f2;
+}
+
+.index-main .section-gucci-story {
+  padding-bottom: 40px;
+}
+
+.index-main .section-gucci-story h3 {
+  margin-top: 70px;
+  color: #636363;
+  font-weight: 300;
+  font-size: 35px;
+  letter-spacing: 2px;
+}
+
+.index-main .section-gucci-story h3:after {
+  content: '';
+  display: block;
+  width: 150px;
+  height: 1px;
+  margin: 10px auto;
+  background: gray;
+}
+
+.index-main .section-gucci-story > div {
+  -webkit-column-count: 3;
+          column-count: 3;
+  width: 1300px;
+  margin: 0px auto;
+}
+
+.index-main .section-gucci-story > div article {
+  display: inline-block;
+  margin: 60px 0px;
+}
+
+.index-main .section-gucci-story > div article .image-part img {
+  width: 340px;
+}
+
+.index-main .section-gucci-story > div article h4 {
+  margin-top: 20px;
+  font-size: 20px;
+}
+
+.index-main .section-gucci-story > div article .aside-hover-effect {
+  margin-top: 10px;
 }
 
 .aside-hover-effect {
@@ -1111,6 +1206,10 @@ em {
 
 .aside-hover-effect:hover {
   color: #7a7a7a;
+}
+
+.wide-margin {
+  margin-top: 50px;
 }
 
 .text-ir {
